--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon",
-    "generate": "graphql-codegen --config codegen.ts",
-    "populate": "ts-node src/common/constants/skillPopulate.ts"
+    "generate": "graphql-codegen --config codegen.ts"
   },
   "dependencies": {
     "@apollo/server": "^4.12.0",
     "@graphql-tools/schema": "^10.0.23",
+    "@tensorflow/tfjs": "^4.22.0",
     "ajv": "^8.17.1",
     "ajv-errors": "^3.0.0",
     "ajv-formats": "^3.0.1",
