--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ajv-formats": "^3.0.1",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "dataloader": "^2.2.3",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "express-async-errors": "^3.1.1",
@@ -25,6 +26,7 @@
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.1",
+    "socket.io": "^4.8.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.8.3",
     "winston": "^3.17.0",
