--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/node": "^22.15.3",
     "@types/ws": "^8.18.1",
     "nodemon": "^3.1.10",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "tsc-alias": "^1.8.16"
   }
 }
