--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -82,6 +82,9 @@ jobs:
         with:
           node-version: '20.x'
 
+      - name: Install Vercel CLI
+        run: yarn global add vercel
+
       - name: Download Build Artifacts
         uses: actions/download-artifact@v4
         with:
