--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -93,11 +93,8 @@ jobs:
 
       - name: Deploy Project Artifacts to vercel
         run: |
-         vercel deploy --prebuilt --prod \
-          --token=${{ secrets.VERCEL_TOKEN }} \
-          --org=${{ secrets.VERCEL_ORG_ID }} \
-          --project=${{ secrets.VERCEL_PROJECT_ID }} \
-          --confirm
+         vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }} > domain.txt 
+         vercel alias --scope ${{ secrets.VERCEL_ORG_ID }} --token=${{ secrets.VERCEL_TOKEN }} set `cat domain.txt` skill-swap-preview.vercel.app
 
   Production:
     name: Deploy to Vercel (Production)
@@ -114,6 +111,10 @@ jobs:
         with:
           node-version: '20.x'
 
+      - name: Install Vercel CLI
+        run: yarn global add vercel
+
+
       - name: Download Build Artifacts
         uses: actions/download-artifact@v4
         with:
@@ -121,9 +122,4 @@ jobs:
           path: dist/
         
       - name: Deploy Project Artifacts to vercel
-        run: |
-          vercel deploy --prebuilt --prod \
-          --token=${{ secrets.VERCEL_TOKEN }} \
-          --org=${{ secrets.VERCEL_ORG_ID }} \
-          --project=${{ secrets.VERCEL_PROJECT_ID }} \
-          --confirm
+        run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }} --confirm
