--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -58,8 +58,14 @@ jobs:
       - name: Install Dependencies
         run: yarn install
 
+      - name: Install Vercel CLI
+        run: yarn global add vercel
+
+      - name: Pull Vercel Configuration
+        run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
+
       - name: Build Project
-        run: npx vercel build --token=${{ secrets.VERCEL_TOKEN }}
+        run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
       
       - name: Upload Build Artifacts
         uses: actions/upload-artifact@v4
