--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -20,7 +20,9 @@ jobs:
           cache: 'yarn'
 
       - name: Install Dependencies
-        run: yarn install --frozen-lockfile --production=false
+        run: |
+          yarn install --frozen-lockfile --production=false
+          yarn list | grep tsc-alias  # Verify installation
 
       - name: Upload node_modules
         uses: actions/upload-artifact@v4
