--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -2,49 +2,70 @@ name: Vercel Production Deployment
 
 on: 
   push:
-    branches:
-      - main
-jobs: 
-  install_and_build:
-    name: Install and Build
+    branches: [ main ]
+jobs:
+  install:
+    name: Install
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "20.x"
+          cache: 'yarn'
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
+
+      - name: Upload node_modules
+        uses: actions/upload-artifact@v3
+        with:
+          name: node_modules
+          path: node_modules
+
+  build:
+    needs: install
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Download node_modules
+        uses: actions/download-artifact@v3
+        with:
+          name: node_modules
+          path: node_modules
       
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '20.x'
-          cache: 'yarn'
       
-      - name: Install dependencies
-        run: yarn install --frozen-lockfile
-      
-      - name: Build project
+      - name: Build Project
         run: yarn build
-      
+
       - name: Upload build artifacts
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v3
         with:
           name: dist
-          path: |
-            dist/
-            package.json
-            yarn.lock
-            vercel.json
-          retention-days: 1
+          path: dist
 
   deploy:
     name: Production Deployment
-    needs: install_and_build
+    needs: build
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps: 
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: download build Artifacts
         uses: actions/download-artifact@v4
         with: 
           name: dist
-          path: .
+          path: dist
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
