--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -17,7 +17,10 @@ jobs:
           node-version: "20.x"
           cache: 'yarn'
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
+        run: |
+          yarn install --frozen-lockfile --production=false
+          # Check if tsc-alias is installed
+          ls -la node_modules/.bin/tsc-alias || echo "tsc-alias not found"
 
       - name: Upload node_modules
         uses: actions/upload-artifact@v4
@@ -44,7 +47,10 @@ jobs:
           node-version: '20.x'
       
       - name: Build Project
-        run: yarn build
+        run: | 
+          yarn build:CLI
+          # verify the output
+          ls -la dist/
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
