--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -17,10 +17,7 @@ jobs:
           node-version: "20.x"
           cache: 'yarn'
       - name: Install dependencies
-        run: |
-          yarn install --frozen-lockfile --production=false
-          # Check if tsc-alias is installed
-          ls -la node_modules/.bin/tsc-alias || echo "tsc-alias not found"
+        run: yarn install --frozen-lockfile
 
       - name: Upload node_modules
         uses: actions/upload-artifact@v4
@@ -45,13 +42,12 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '20.x'
-          
+
       - name: Install tsc-alias
         run: yarn global add tsc-alias
 
       - name: Build Project
-        run: | 
-          yarn build
+        run: yarn build
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
