--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "cron": "^4.3.1",
     "dataloader": "^2.2.3",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
