--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon",
-    "start": "node dist/src/main.js",
+    "start": "node dist/main.js",
     "build": "tsc && tsc-alias",
     "generate": "graphql-codegen --config codegen.ts"
   },
