--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "dev": "nodemon",
     "start": "node dist/main.js",
     "build": "tsc && tsc-alias",
-    "generate": "graphql-codegen --config codegen.ts"
+    "generate": "graphql-codegen --config codegen.ts",
+    "train-model": "ts-node -r tsconfig-paths/register src/services/ai/train-and-save.ts"
   },
   "dependencies": {
     "@apollo/server": "^4.12.0",
     "@graphql-tools/schema": "^10.0.23",
-    "@tensorflow/tfjs": "^4.22.0",
     "ajv": "^8.17.1",
     "ajv-errors": "^3.0.0",
     "ajv-formats": "^3.0.1",
@@ -24,6 +24,7 @@
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "express-async-errors": "^3.1.1",
+    "global": "^4.4.0",
     "graphql": "^16.11.0",
     "graphql-scalars": "^1.24.2",
     "graphql-ws": "^6.0.4",
