--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "global": "^4.4.0",
     "graphql": "^16.11.0",
     "graphql-scalars": "^1.24.2",
+    "graphql-subscriptions": "^3.0.0",
     "graphql-ws": "^6.0.4",
     "helmet": "^8.1.0",
     "http-errors": "^2.0.0",
