--- a/package.json
+++ b/package.json
@@ -55,5 +55,8 @@
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.16"
+  },
+  "engines": {
+    "node": ">=20.0.0"
   }
 }
