--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
     "strict": true,
     "skipLibCheck": true
   },
-  "include": ["src/**/*.ts", "dummy/context.ts"],
+  "include": ["src/**/*.ts"],
   "exclude": ["node_modules"],
   "ts-node": { "files": true }
 }
