--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,11 +8,13 @@
     "moduleResolution": "node",
     "sourceMap": true,
     "outDir": "./dist",
+    "rootDir": "./src",
     "baseUrl": ".",
     "paths": {
       "src/*": ["src/*"]
     },
     "types": ["node"],
+    "typeRoots": ["node_modules/@types"],
     "resolveJsonModule": true,
     "allowJs": true,
     "forceConsistentCasingInFileNames": true,
@@ -20,6 +22,6 @@
     "skipLibCheck": true
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["node_modules"],
+  "exclude": ["node_modules", "dist"],
   "ts-node": { "files": true }
 }
