--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
       "src/*": ["src/*"]
     },
     "types": ["node"],
+    "typeRoots": ["node_modules/@types"],
     "resolveJsonModule": true,
     "allowJs": true,
     "forceConsistentCasingInFileNames": true,
