--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
       "src/*": ["src/*"]
     },
     "types": ["node"],
-    "typeRoots": ["./node_modules/@types", "../node_modules/@types", "../../node_modules/@types" ],
+    "typeRoots": ["./node_modules/@types"],
     "resolveJsonModule": true,
     "allowJs": true,
     "forceConsistentCasingInFileNames": true,
