--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,6 @@
     "skipLibCheck": true
   },
   "include": ["src/"],
-  //"exclude": ["node_modules"],
+  "exclude": ["node_modules"],
   "ts-node": { "files": true }
 }
