--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "socket.io": "^4.8.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.8.3",
+    "web-push": "^3.6.7",
     "winston": "^3.17.0",
     "ws": "^8.18.1"
   },
