--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,9 +9,7 @@
     "sourceMap": true,
     "outDir": "dist",
     "baseUrl": ".",
-    "paths": {
-      "src/*": ["src/*"]
-    },
+    "paths": { "src/*": ["src/*"] },
     "types": ["node"],
     "resolveJsonModule": true,
     "allowJs": true,
