--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^24.1.0",
+    "@types/web-push": "^3.6.4",
     "@types/ws": "^8.18.1",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
